# django-ipam

./: .gitignore  .travis.yml  README.md  README.rst  requirements-test.txt  requirements.txt  runcheckmigration  runtests.py  setup.cfg  setup.py
django_ipam/: __init__.py  admin.py  apps.py  compat.py  models.py
django_ipam/api/: generics.py  serializers.py  urls.py  views.py
django_ipam/base/: admin.py  fields.py  models.py
django_ipam/management/commands/: __init__.py  export_subnet.py  import_subnet.py
django_ipam/migrations/: 0001_initial.py  0002_auto_20180612_0858.py  0002_auto_20180613_1043.py  0002_auto_20180713_0911.py  0003_auto_20180719_1849.py  0003_remove_ipaddress_owner.py
django_ipam/static/django-ipam/css/: admin.css
django_ipam/static/django-ipam/js/: custom.js  hosts-infinite-scrolling.js  ip-request.js  subnet.js
django_ipam/templates/admin/django-ipam/: change_form.html
django_ipam/templates/admin/django-ipam/subnet/: change_form.html  change_list.html  import.html
django_ipam/tests/: __init__.py  test_admin.py  test_api.py  test_commands.py  test_forms.py  test_models.py  utils.py
django_ipam/tests/base/: base.py  test_admin.py  test_api.py  test_commands.py  test_models.py
tests/: settings.py  urls.py
tests/sample_ipam/: admin.py  apps.py  models.py  tests.py
tests/sample_ipam/migrations/: 0001_initial.py  0002_auto_20180713_1046.py
