[flake8]
exclude = *.egg-info,
          .git,
          *migrations*,
          ./tests/*settings*.py,
          docs/*
max-line-length = 110
# W503: line break before or after operator
# W504: line break after or after operator
# W605: invalid escape sequence
ignore = W605, W503, W504

[metadata]
license-file = LICENSE

[wheel]
universal = 1

[isort]
line_length = 109
skip = migrations
combine_as_imports = true
default_section = THIRDPARTY
include_trailing_comma = true
known_first_party = django_ipam
multi_line_output = 5
not_skip = __init__.py
